--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,11 @@ build/
 .next/
 out/
 
+# Webpack build artifacts
+.webpack/
+*.hot-update.js
+*.hot-update.json
+
 # ============================
 # Python
 # ============================
