Add desktop app deployment configuration and build scripts
- Enhanced Electron Forge configuration with app metadata and icons
- Updated package.json with proper product name and description
- Added comprehensive DEPLOYMENT.md guide covering:
  * Building installers for Windows, macOS, and Linux
  * Adding custom app icons
  * Code signing for production
  * Distribution strategies (manual, GitHub Releases, auto-update)
  * Backend deployment considerations

- Created build scripts for easy packaging:
  * build-app.bat (Windows)
  * build-app.sh (Linux/Mac)

- Updated README with deployment section
- Configured app metadata:
  * Product name: StudyKeet
  * Bundle ID: com.studykeet.app
  * Category: Education
  * Windows metadata for proper installer properties

Ready to build executables with: npm run make

--- a/studyKeetApplication/package.json
+++ b/studyKeetApplication/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "studykeetapplication",
-  "productName": "studykeetapplication",
+  "name": "studykeet",
+  "productName": "StudyKeet",
   "version": "1.0.0",
-  "description": "My Electron application description",
+  "description": "AI-Powered Study Assistant with Spaced Repetition and Smart Flashcards",
   "main": ".webpack/main",
   "scripts": {
     "start": "electron-forge start",
